Update ChronoTimer.java
Updated DNF, Cancel, and LinkedList data structures